# gtk4rust_playground

./: Cargo.toml  \  docker-compose.windows.yml  docker-compose.yml
.github/workflows/: buildnpublish.yml
src/: ai.lua  ai2.lua  counter.lua  gallery.lua  main.lua  main.rs  saas.lua  style.css
src/api/: mod.rs  tree.rs  widgets.rs
src/api/elements/: button.rs  dropdown.rs  fetch.rs  heading.rs  image.rs  input.rs  link.rs  mod.rs  text.rs
src/view/: mod.rs
