[package]
name = "my-gtk-app"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { version = "0.9.0", package = "gtk4", features = ["v4_14"] }
isahc = "1.7.2"
mlua = { version = "0.9.9", features = ["lua54", "vendored"] }
nary_tree = "0.4.3"
reqwest = {version = "0.12.5",features = ["blocking"]}
